--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     </div>
 
     <!-- Interaktyvus žemėlapis -->
+    <div class="map-container">
+    <div id="map"></div>
+    <div class="map-overlay">
+        <button class="map-3d-toggle">3D View</button>
+    </div>
+</div>
     <div id="map" style="width: 100%; height: 400px"></div>
 
     <!-- CV atsisiuntimas -->
