--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <!-- Interaktyvus žemėlapis -->
+    <div style="width: 100px; height: 100px; background: red"></div>
     <div class="map-container">
     <div id="map"></div>
     <div class="map-overlay">
