--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="lt">
 <head>
-    <!-- Metatags ir title su dinaminiais kintamaisiais -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-lt="Mano Portfolio" data-en="My Portfolio">Mano Portfolio</title>
@@ -9,7 +8,6 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
-    <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
@@ -25,14 +23,12 @@
     </div>
 
     <!-- Interaktyvus žemėlapis -->
-    <div style="width: 100px; height: 100px; background: red"></div>
     <div class="map-container">
-    <div id="map"></div>
-    <div class="map-overlay">
-        <button class="map-3d-toggle">3D View</button>
+        <div id="interactive-map"></div>
+        <div class="map-overlay">
+            <button class="map-3d-toggle">3D View</button>
+        </div>
     </div>
-</div>
-    <div id="map" style="width: 100%; height: 400px"></div>
 
     <!-- CV atsisiuntimas -->
     <section class="cv-section">
@@ -40,5 +36,7 @@
             📥 Atsisiųsti CV
         </a>
     </section>
+
+    <script src="main.js"></script>
 </body>
 </html>
