--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="main.js" defer></script>
+
 </head>
 <body>
     <!-- Kalbos perjungimas -->
@@ -21,6 +23,7 @@
     <div id="avatar-container">
         <canvas class="avatar3d"></canvas>
     </div>
+    <div class="particle-canvas"></div>
 
     <!-- Interaktyvus žemėlapis -->
     <div class="map-container">
