--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       #map {
         height: 600px;  /* Aukštis */
-        width: 100%;    /* Plotis */
+        width: 100%;   
       }
     </style>
   </head>
