--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RYTIS ALIŠAUSKAS | CV 2025</title>
+    <script src="assets/mapbox-config.js"></script>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css">
     <link rel="stylesheet" href="styles.css">
 </head>
