--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RYTIS ALIŠAUSKAS | CV 2025</title>
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto+Mono:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Judantis gradientinis fonas -->
-    <div class="animated-bg"></div>
+    <div class="star-background"></div>
 
     <!-- Kalbos mygtukai (perdėti į viršų) -->
     <div class="language-switcher">
