--- a/index.html
+++ b/index.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RYTIS ALIŠAUSKAS | CV 2025</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto+Mono:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Judantis gradientinis fonas -->
+    <!-- Žvaigždžių fonas (sukurtas per JS) -->
     <div class="star-background"></div>
 
-    <!-- Kalbos mygtukai (perdėti į viršų) -->
+    <!-- Kalbos mygtukai -->
     <div class="language-switcher">
         <button class="lang-btn active" data-lang="lt">LT</button>
         <button class="lang-btn" data-lang="en">EN</button>
     </div>
 
-    <!-- Pagrindinis turinio blokas -->
+    <!-- Pagrindinis turinys -->
     <main class="glass-container">
         <header>
             <h1 data-translate="name">RYTIS ALIŠAUSKAS</h1>
             <a href="cv.pdf" download class="download-btn" data-translate="download">📥 Parsisiųsti CV</a>
         </header>
 
-        <!-- Patirties ir išsilavinimo sekcijos -->
+        <!-- Turinio sekcijos -->
         <section class="content-section">
             <div class="timeline-item" data-aos="fade-up">
                 <h2 data-translate="experience">PATIRTIS</h2>
-                <!-- Dinaminis turinys -->
+                <!-- Dinaminis turinys (užpildomas per JS) -->
             </div>
             <div class="timeline-item" data-aos="fade-up">
                 <h2 data-translate="education">ŠVIETIMAS</h2>
