--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <!-- Turinio sekcijos -->
         <section class="content-section">
             <div class="timeline-item" data-aos="fade-up">
-                <h2 data-translate="experience">PATIRTIS</h2>
+                <h2 data-translate="experience">Email:rytis.programer@gmail.com</h2>
                 <!-- Dinaminis turinys (užpildomas per JS) -->
             </div>
             <div class="timeline-item" data-aos="fade-up">
-                <h2 data-translate="education">ŠVIETIMAS</h2>
+                <h2 data-translate="education">Phone:+37069232493</h2>
                 <!-- Dinaminis turinys -->
             </div>
         </section>
