--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <header class="hero">
         <h1 data-translate="name">RYTIS ALIŠAUSKAS</h1>
         <p data-translate="tagline">Programuotojas | Web kūrėjas</p>
-        <a href="cv.pdf" download class="download-btn" data-translate="download">📥 Parsisiųsti CV</a>
+         <div class="cv-buttons">
+                <a href="cv.pdf" download class="cv-btn download-btn">📥 Atsisiųsti CV</a>
+                <a href="cv.pdf" target="_blank" class="cv-btn view-btn">👁️ Peržiūrėti CV</a>
+            </div>
     </header>
 
     <!-- Apie mane sekcija -->
