--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#projects">Projektai</a></li>
                 <li><a href="#skills">Įgūdžiai</a></li>
                 <li><a href="#contact">Kontaktai</a></li>
-                <li><a href="cv.html" class="cv-btn">CV</a></li> <!-- CV Button -->
+                <li><a href="cv.html" class="cv-btn">CV</a></li>
             </ul>
         </div>
     </nav>
@@ -81,6 +81,15 @@
                 <textarea id="message" placeholder="Jūsų žinutė" required></textarea>
                 <button type="submit">Siųsti</button>
             </form>
+        </section>
+
+        <!-- Žaidimas -->
+        <section id="game" class="content-section">
+            <h2>Atspėk skaičių!</h2>
+            <p>Atspėkite skaičių nuo 1 iki 100:</p>
+            <input type="number" id="guess" placeholder="Įveskite skaičių" />
+            <button id="submitGuess">Patvirtinti</button>
+            <p id="result"></p>
         </section>
     </main>
 
